[package]
name = "compute-pix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13.1"
env_logger = "0.10.0"
futures-intrusive = "0.5.0"
image = "0.24.5"
pollster = "0.3.0"
structopt = "0.3.26"
wgpu = { git = "https://github.com/gfx-rs/wgpu", features = ["spirv", "vulkan-portability"] }

